# bedrock

./: .env.example  .gitignore  .taplo.toml  AGENT.md  AGENTS.md  BEDROCK_SOL_MACRO.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  build_android_local.sh  build_kotlin.sh  build_swift.sh  catalog-info.yaml  clippy.toml  cspell.json  deny.toml  release-plz.toml  run_kotlin_tests.sh  run_swift_tests.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/actions/version-alignment/: action.yml  check_rust_toolchain.py  check_uniffi_version.py
.github/scripts/: check_uniffi_version.py
.github/workflows/: ci.yml  codeql.yml  initiate-release.yml  publish-release.yml  release-swift-kotlin.yml  release.yml  relyance-sci.yml  validate-pr.yml
bedrock/: CHANGELOG.md  Cargo.toml  FILESYSTEM.md
bedrock-core/: Cargo.toml
bedrock-core/src/: lib.rs
bedrock-core/src/backup/: mod.rs  test.rs
bedrock-core/src/backup/backup_format/: v0.rs
bedrock-core/src/migration/: controller.rs  error.rs  mod.rs  state.rs
bedrock-core/src/migration/processors/: example_processor.rs  mod.rs
bedrock-core/src/primitives/: config.rs  filesystem.rs  logger.rs  mod.rs
bedrock-error-macros/: Cargo.toml
bedrock-error-macros/src/: lib.rs
bedrock-macros/: Cargo.toml  README.md
bedrock-macros/src/: lib.rs
bedrock/src/: device.rs  lib.rs  test_utils.rs  tooling_demos.rs
bedrock/src/backup/: client_events.rs  manifest.rs  mod.rs  personal_custody_keypair.rs  service_client.rs  signer.rs  test.rs  turnkey.rs  utils.rs
bedrock/src/backup/backup_format/: mod.rs  v0.rs
bedrock/src/backup/turnkey/: api.rs  error.rs  migrations.rs  mod.rs  policies.rs  test.rs
bedrock/src/bedrock_error/: mod.rs
bedrock/src/contracts/: erc20.rs  mod.rs
bedrock/src/device/: test.rs
bedrock/src/enclave/: constants.rs  mod.rs  tests.rs  types.rs  verifier.rs
bedrock/src/error_demos/: mod.rs
bedrock/src/gnosis_safe/: mod.rs  tests.rs
bedrock/src/logger/: context.rs  mod.rs
bedrock/src/logger_demo/: mod.rs
bedrock/src/migration/: README.md  controller.rs  controller_ext.rs  error.rs  mod.rs  processor.rs  state.rs
bedrock/src/migration/processors/: enable_4337_module_processor.rs  example_processor.rs  mod.rs  nfc_refresh_processor.rs  permit2_approval_processor.rs  poh_migration_processor.rs  safe_4337_module_processor.rs  safe_upgrade_processor.rs
bedrock/src/migration/utils/: mod.rs
bedrock/src/nitro_enclave/: constants.rs  mod.rs  tests.rs  types.rs
bedrock/src/primitives/: address.rs  config.rs  contracts.rs  filesystem.rs  filesystem_example.rs  filesystem_tests.rs  http_client.rs  key_value_store.rs  logger.rs  mod.rs  ntp.rs  personal_custody_keypair.rs  platform.rs  signer.rs  tooling_tests.rs  user_agent.rs  world_id.rs
bedrock/src/primitives/logger/: context.rs  mod.rs
bedrock/src/root_key/: mod.rs  test.rs
bedrock/src/secure/: mod.rs  root_key.rs  test.rs
bedrock/src/siwe/: format.rs  mod.rs  test.rs  world_app.rs  world_app_auth.rs
bedrock/src/smart_account/: mod.rs  nonce.rs  permit2.rs  signer.rs  siwe.rs  tests.rs  transaction.rs  transaction_4337.rs  wallet_address.rs
bedrock/src/smart_account/siwe/: format.rs  test.rs  world_app_auth.rs
bedrock/src/transaction/: foreign.rs  mod.rs  rpc.rs
bedrock/src/transaction/contracts/: entrypoint.rs  erc20.rs  mod.rs  safe_owner.rs
bedrock/src/transactions/: custom_bundler.rs  foreign.rs  mod.rs  rpc.rs  transaction.md
bedrock/src/transactions/contracts/: constants.rs  erc20.rs  erc4626.rs  gnosis_safe.rs  mod.rs  morpho.rs  multisend.rs  permit2.rs  prepare_sign_tx.md  safe_module.rs  usd_legacy_vault.rs  usd_vault.rs  wld_legacy_vault.rs  wld_vault.rs  world_campaign_manager.rs  world_gift_manager.rs  worldchain.rs
bedrock/tests/: common.rs  foundry.rs  safe_personal_sign_integration.rs  test_enable_4337_module_processor.rs  test_nonce_v1_against_solidity.rs  test_permit2_approval_processor.rs  test_safe_4337_module_processor.rs  test_safe_upgrade_processor.rs  test_smart_account.rs  test_smart_account_bundler_sponsored.rs  test_smart_account_erc20_approve.rs  test_smart_account_erc4337_transaction_execution.rs  test_smart_account_morpho.rs  test_smart_account_nonce.rs  test_smart_account_nonce_against_solidity.rs  test_smart_account_permit2_allowance.rs  test_smart_account_permit2_transfer.rs  test_smart_account_personal_sign.rs  test_smart_account_safe_owner_swap.rs  test_smart_account_sign_and_execute_v2.rs  test_smart_account_sign_typed_data.rs  test_smart_account_transfer.rs  test_smart_account_transfer_pbh.rs  test_smart_account_usd_vault.rs  test_smart_account_wa_get_user_operation_receipt.rs  test_smart_account_wld_vault.rs  test_smart_account_wld_vault_migration.rs  test_smart_account_world_campaign_manager.rs  test_smart_account_world_gift_manager.rs  test_smart_account_world_gift_manager_gift_cancel.rs  test_smart_account_world_gift_manager_gift_redeem.rs  test_smart_pbh_sepolia.rs
bedrock/tests/sepolia/: test_smart_account_transfer_pbh.rs
docs/architecture/transactions/: prepare_sign_tx.md
generated-bindings/: bedrock.swift  bedrockFFI.h  bedrockFFI.modulemap
kotlin/: README.md  build.gradle  build.sh  build_kotlin.sh  settings.gradle  settings.gradle.kts  test_kotlin.sh
kotlin/bedrock-android/: build.gradle.kts
kotlin/bedrock-tests/: build.gradle.kts
kotlin/ffi/: build.gradle.kts
solidity/: foundry.toml
solidity/src/: NonceV1Checker.sol
swift/: Package.swift.template  README.md  archive_swift.sh  build_for_local_ios.sh  build_swift.sh  local_swift.sh  make_local_swift_package.sh  test_swift.sh
swift/tests/: Package.swift
swift/tests/BedrockTests/: BedrockCoreTests.swift  BedrockFilesystemTests.swift  BedrockTests.swift  (+4 more)
test_android/: build.gradle
test_ios/BedrockPackage/: Package.swift
uniffi-bindgen/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: common.rs  kotlin.rs  main.rs  swift.rs
xtask/src/templates/: swift_framework_info.plist
(+16 files in other folders)
