[workspace]
members = ["bedrock", "uniffi-bindgen"]
resolver = "2"

[workspace.package]
version = "0.0.1"
license = "MIT"
edition = "2021"
authors = ["World Contributors"]
readme = "./README.md"
homepage = "https://toolsforhumanity.com/world-app" # TODO: Update to specific Bedrock page
repository = "https://github.com/worldcoin/bedrock"
exclude = ["tests/", "uniffi-bindgen/"]
keywords = ["Ethereum", "WorldChain", "World"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[workspace.dependencies]
uniffi = { version = "0.29.2", features = ["build", "tokio"] }

[profile.release]
opt-level = 'z' # Optimize for size.
lto = true      # Enable Link Time Optimization.
panic = "abort"
debug = false
