[workspace]
members = ["bedrock", "bedrock-macros", "uniffi-bindgen"]
resolver = "2"

[workspace.package]
authors = [
  "Paolo D'Amico <paolodamico@users.noreply.github.com",
  "Luke Mann <luke@mann.xyz>",
  "Seva Zhidkov <zhidkovseva@gmail.com>",
  "Aurel <105201452+aurel-fr@users.noreply.github.com>",
]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
edition = "2021"
exclude = ["tests/", "uniffi-bindgen/"]
homepage = "https://docs.toolsforhumanity.com/world-app/bedrock"
keywords = ["Ethereum", "WorldChain", "World"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/worldcoin/bedrock"
version = "0.1.0"

[workspace.dependencies]
uniffi = { version = "0.30.0", features = ["build", "tokio"] }

[profile.release]
debug = false
lto = true       # Enable Link Time Optimization.
opt-level = 'z'  # Optimize for size.
panic = "unwind"
