[package]
description = "Portable core library for World App — backup, migration, and root key management with no EVM/wallet dependencies."
name = "bedrock-core"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["lib"]
name = "bedrock_core"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
base64 = "0.22.1"
bedrock-macros = { path = "../bedrock-macros" }
blake3 = "1.8.3"
chrono = { version = "0.4.42", default-features = false, features = [
  "now",
  "std",
  "serde",
] }
ciborium = "0.2.2"
crypto_box = { version = "0.9.1", features = ["seal"] }
dryoc = "0.7.0"
flate2 = "1.1.5"
futures = "0.3"
hex = "0.4.3"
hpke = { version = "0.10", features = [
  "alloc",
  "p256",
  "serde_impls",
], default-features = false }
k256 = { version = "0.13.4", default-features = false, features = ["std", "ecdsa"] }
log = "0.4.22"
once_cell = "1.19"
p256 = { version = "0.13.2", default-features = false, features = [
  "ecdsa",
  "pem",
  "pkcs8",
] }
rand = { version = "0.8.5", features = ["std", "std_rng"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0"
sha2 = "0.10.8"
strum = { version = "0.27.2", features = ["derive"] }
subtle = { version = "2.6.1", default-features = false }
tar = "0.4.40"
thiserror = "2.0.18"
tokio = { version = "1.47.1", features = ["time", "sync"] }
uniffi = { workspace = true, features = ["build", "tokio"] }
uuid = { version = "1.21.0", features = ["v4"], default-features = false }
zeroize = "1.8"
