[package]
name = "bedrock-macros"
description = "Macros for bedrock error handling and UniFFI integration"
publish = false

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true



[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] } 