[package]
description = "Foundational library which powers World App's crypto wallet."
name = "bedrock"

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "bedrock"

[features]
default = ["tooling_tests"]
tooling_tests = ["dep:tokio"]

[dependencies]
alloy = { version = "1.0.30", default-features = false, features = [
  "dyn-abi",
  "eip712",
  "signer-local",
  "sol-types",
] }
anyhow = "1.0"
async-trait = "0.1.89"
base64 = "0.22.1"
bedrock-macros = { path = "../bedrock-macros" }
blake3 = "1.5.5"
chrono = { version = "0.4.41", default-features = false, features = ["now", "std"] }
crypto_box = { version = "0.9.1", features = ["seal"] }
flate2 = "1.0.28"
aws-nitro-enclaves-nsm-api = "0.4.0"
ciborium = "0.2.2"
coset = "0.3.8"
hex = "0.4.3"
log = "0.4.22"
p384 = { version = "0.13", features = ["ecdsa", "sha384"] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
ruint = { version = "1.15.0", default-features = false, features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0"
sha2 = "0.10.8"
strum = { version = "0.26.2", features = ["derive"] }
subtle = { version = "2.6.1", default-features = false }
tar = "0.4.40"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["time"], optional = true }
uniffi = { workspace = true, features = ["build", "tokio"] }
uuid = { version = "1.4.1", features = ["v4"], default-features = false }
zeroize = "1.8"
x509-cert = { version = "0.2.5", features = ["pem"] }
webpki = "0.22"
once_cell = "1.19"

[dev-dependencies]
alloy = { version = "1.0.30", default-features = false, features = [
  "json",
  "contract",
  "node-bindings",
  "reqwest-rustls-tls",
] }
dotenvy = "0.15.7"
serial_test = "3.2.0"
tokio = { version = "1.47.1", features = ["time"] }
tokio-test = "0.4.4"
