[package]
description = "Foundational library which powers World App's crypto wallet."
name = "bedrock"

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "bedrock"

[features]
default = ["tooling_tests"]
tooling_tests = []
# Test_utils are for unit and integration tests.
test_utils = []
__test = ["test_utils"]

[dependencies]
alloy = { version = "1.1.2", default-features = false, features = [
  "dyn-abi",
  "eip712",
  "signer-local",
  "sol-types",
  "network",
  "providers",
  "contract",
] }
anyhow = "1.0"
async-trait = "0.1.89"
aws-nitro-enclaves-nsm-api = "0.4.0"
base64 = "0.22.1"
bedrock-macros = { path = "../bedrock-macros" }
blake3 = "1.8.3"
chrono = { version = "0.4.42", default-features = false, features = [
  "now",
  "std",
  "serde",
] }
ciborium = "0.2.2"
coset = "0.4.1"
crypto_box = { version = "0.9.1", features = ["seal"] }
dryoc = "0.7.0"
flate2 = "1.1.5"
hex = "0.4.3"
hpke = { version = "0.10", features = [
  "alloc",
  "p256",
  "serde_impls",
], default-features = false }
k256 = { version = "0.13.4", default-features = false, features = ["std"] }
log = "0.4.22"
once_cell = "1.19"
p256 = { version = "0.13.2", default-features = false, features = [
  "ecdsa",
  "pem",
  "pkcs8",
] }
p384 = { version = "0.13", default-features = false, features = ["ecdsa", "sha384"] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
ruint = { version = "1.16.0", default-features = false, features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0"
sha2 = "0.10.8"
strum = { version = "0.27.2", features = ["derive"] }
subtle = { version = "2.6.1", default-features = false }
tar = "0.4.40"
thiserror = "2.0.18"
tokio = { version = "1.47.1", features = ["time"] }
turnkey_enclave_encrypt = "0.3.0"
uniffi = { workspace = true, features = ["build", "tokio"] }
uuid = { version = "1.21.0", features = ["v4"], default-features = false }
webpki = "0.22"
x509-cert = { version = "0.2.5", features = ["pem"] }
zeroize = "1.8"
hex-literal = "1.1.0" # Provides the `hex!` macro for compile-time hex decoding

# TODO: once `rand` can be bumped to 0.9, add the explicit feature flag `os_rng`. this explicitly determines no `thread_rng`;
# bumping this requires crypto_box to update rand: https://github.com/RustCrypto/nacl-compat/issues/176

[dev-dependencies]
alloy = { version = "1.1.2", default-features = false, features = [
  "json",
  "contract",
  "node-bindings",
] }
dotenvy = "0.15.7"
k256 = { version = "0.13.4", default-features = false, features = ["std", "ecdsa"] }
serial_test = "3.2.0"
tokio = { version = "1.47.1", features = ["time"] }
tokio-test = "0.4.4"
