[package]
name = "uniffi-bindgen"
description = "Foreign binding generation for Bedrock"
publish = false

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[[bin]]
name = "uniffi-bindgen"
path = "./src/uniffi_bindgen.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }