[package]
description = "Foreign binding generation for Bedrock"
name = "uniffi-bindgen"
publish = false

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "uniffi-bindgen"
path = "./src/uniffi_bindgen.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
